--- a/WSUI.Module/OF.Module.csproj
+++ b/WSUI.Module/OF.Module.csproj
@@ -20,7 +20,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>WSUIModule.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>OFModule.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Trial|AnyCPU'">
     <OutputPath>..\Routput\</OutputPath>
@@ -192,12 +192,12 @@
     <Compile Include="Interface\View\ISettingsView.cs" />
     <Compile Include="Interface\View\ISidebarView.cs" />
     <Compile Include="Interface\View\IUIView.cs" />
-    <Compile Include="Interface\Service\IWSCommand.cs" />
+    <Compile Include="Interface\Service\IOFCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AdvancedSearch\AdvancedSearchTemplateSelector.cs" />
     <Compile Include="Service\AllFilesDataTemplateSelector.cs" />
-    <Compile Include="Service\Behaviors\WSUIActualHeightBehavior.cs" />
-    <Compile Include="Service\Behaviors\WSUIListboxSelectOnClickBehavior.cs" />
+    <Compile Include="Service\Behaviors\OFActualHeightBehavior.cs" />
+    <Compile Include="Service\Behaviors\OFListboxSelectOnClickBehavior.cs" />
     <Compile Include="Service\ContactDataTemplateSelector.cs" />
     <Compile Include="Service\ContactHelpers.cs" />
     <Compile Include="Service\DateToStringConverter.cs" />
@@ -305,12 +305,12 @@
     <Compile Include="View\Windows\OFMainSettingsWindow.xaml.cs">
       <DependentUpon>OFMainSettingsWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WSModule.cs" />
+    <Compile Include="OFModule.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WSPreview\OFPreview.csproj">
+    <ProjectReference Include="..\WSPreview\OF.Preview.csproj">
       <Project>{3e9f9f18-b9ad-4dde-a5d6-f71b75c737d2}</Project>
-      <Name>OFPreview</Name>
+      <Name>OF.Preview</Name>
     </ProjectReference>
     <ProjectReference Include="..\WSUI.Core\OF.Core.csproj">
       <Project>{D650F4E9-99FE-46EC-A59D-BF3A99652255}</Project>
@@ -486,7 +486,7 @@
     <Resource Include="Images\replayall.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="WSUIModule.snk" />
+    <None Include="OFModule.snk" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\minus.png" />
