--- a/WSUI.OutlookPlugin/OF.OutlookPlugin.csproj
+++ b/WSUI.OutlookPlugin/OF.OutlookPlugin.csproj
@@ -221,9 +221,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WSPreview\OFPreview.csproj">
+    <ProjectReference Include="..\WSPreview\OF.Preview.csproj">
       <Project>{3E9F9F18-B9AD-4DDE-A5D6-F71B75C737D2}</Project>
-      <Name>OFPreview</Name>
+      <Name>OF.Preview</Name>
     </ProjectReference>
     <ProjectReference Include="..\WSUI.Control\OF.Control.csproj">
       <Project>{FC28437E-0008-4A62-B444-37EB9E6B5AE6}</Project>
