added files for building project with generation of version and etc. added the possibility to build ES plugin with maven

--- a/Toolkits/wsgen.exe.config
+++ b/Toolkits/wsgen.exe.config
@@ -10,8 +10,8 @@
             <setting name="BulidNumberFilename" serializeAs="String">
                 <value>wsui.number</value>
             </setting>
-            <setting name="BuildNumber" serializeAs="String">
-                <value>1.0.2</value>
+            <setting name="Major" serializeAs="String">
+                <value>1</value>
             </setting>
             <setting name="VersionFilename" serializeAs="String">
                 <value>Version.cs</value>
@@ -19,8 +19,18 @@
             <setting name="SetupProjectFile" serializeAs="String">
                 <value>\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\Product.wxs</value>
             </setting>
-            <setting name="BuildCount" serializeAs="String">
+            <setting name="Revision" serializeAs="String">
                 <value>1</value>
+            </setting>
+            <setting name="Minor" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Build" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="BuildNumber" serializeAs="String">
+                <value>
+                </value>
             </setting>
         </WSGen.Properties.Settings>
     </userSettings>
