--- a/WSGen/Properties/Settings.settings
+++ b/WSGen/Properties/Settings.settings
@@ -5,8 +5,8 @@
     <Setting Name="BulidNumberFilename" Type="System.String" Scope="User">
       <Value Profile="(Default)">wsui.number</Value>
     </Setting>
-    <Setting Name="BuildNumber" Type="System.String" Scope="User">
-      <Value Profile="(Default)">1.0.0</Value>
+    <Setting Name="Major" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="VersionFilename" Type="System.String" Scope="User">
       <Value Profile="(Default)">Version.cs</Value>
@@ -14,8 +14,17 @@
     <Setting Name="SetupProjectFile" Type="System.String" Scope="User">
       <Value Profile="(Default)">\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\Product.wxs</Value>
     </Setting>
-    <Setting Name="BuildCount" Type="System.Int32" Scope="User">
+    <Setting Name="Revision" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="Minor" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Build" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
+    <Setting Name="BuildNumber" Type="System.String" Scope="User">
+      <Value Profile="(Default)"> </Value>
     </Setting>
   </Settings>
 </SettingsFile>
