updated loaders for add-in fixed UI layout for bootstrapper project updated generating of build number fixed bug connected to closing outlook with plugin.

--- a/Toolkits/wsgen.exe.config
+++ b/Toolkits/wsgen.exe.config
@@ -28,6 +28,9 @@
             <setting name="Build" serializeAs="String">
                 <value>2</value>
             </setting>
+            <setting name="BootstrapperProject" serializeAs="String">
+                <value>\OF.OutlookFinderSetup\Bundle.wxs</value>
+            </setting>
             <setting name="BuildNumber" serializeAs="String">
                 <value>
                 </value>
