--- a/WSGen/app.config
+++ b/WSGen/app.config
@@ -28,6 +28,9 @@
             <setting name="Build" serializeAs="String">
                 <value>2</value>
             </setting>
+            <setting name="BootstrapperProject" serializeAs="String">
+                <value>\OF.OutlookFinderSetup\Bundle.wxs</value>
+            </setting>
             <setting name="BuildNumber" serializeAs="String">
                 <value>
                 </value>
