--- a/WSUI.Infrastructure/OF.Infrastructure.csproj
+++ b/WSUI.Infrastructure/OF.Infrastructure.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticSearchOFPluginStatusClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticTrackingClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticUpdateSettingsClient.cs" />
+    <Compile Include="Implements\Service\IAttachmentReader.cs" />
     <Compile Include="MVVM\AdvancedSearch\OFSortByAdvancedSearchCriteria.cs" />
     <Compile Include="MVVM\AdvancedSearch\OFStringAdvancedSearchCriteria.cs" />
     <Compile Include="Attributes\OFFieldIndexAttribute.cs" />
@@ -209,6 +210,7 @@
     </Compile>
     <Compile Include="RegionNames.cs" />
     <Compile Include="Service\Dumper\OFMiniDumper.cs" />
+    <Compile Include="Service\Index\OFAttachmentReader.cs" />
     <Compile Include="Service\OFEventArgs.cs" />
     <Compile Include="Service\OFExtensionMethods.cs" />
     <Compile Include="Service\OFFileService.cs" />
