--- a/PSTRiverPlugin/pom.xml
+++ b/PSTRiverPlugin/pom.xml
@@ -91,6 +91,13 @@
             <version>4.2.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>us.monoid.web</groupId>
+            <artifactId>resty</artifactId>
+            <version>0.3.2</version>
+        </dependency>
+
     </dependencies>
     
     <build>
