fixed the problem with getting Outlook instance on Vincent PC. uploaded new version 1.0.3.1001

--- a/OF.ServiceApp/OF.ServiceApp.csproj
+++ b/OF.ServiceApp/OF.ServiceApp.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <StartupObject>OF.ServiceApp.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -87,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WSUI.Core\OF.Core.csproj">
